stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_mutual_recursion_partial_missing_param_facts.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/mutual_recursion_partial_missing_param_facts.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × recursive group needs type facts
   ╭─[tests/fixtures/diagnostics/types/mutual_recursion_partial_missing_param_facts.ml:1:4]
 1 │ fn left(value) -> i64 {
   ·    ──┬─
   ·      ╰── this recursive group does not constrain its parameter and return types enough for stage0 to lower it safely
 2 │   right(value)
   ╰────
  help: add parameter and return type annotations, or add concrete operations
        that determine the recursive functions' types
